Integrate KubeJS APIs, docs, and GUI assets
Add a full KubeJS integration and documentation: introduce a large README_KUBEJS.md guide and replace README.md with a pack-dev oriented Spanish PMMO overview. Add numerous KubeJS API classes and bindings (Plugin, LevelLockAPI, LockItemAPI, NBTLockAPI, PlayerDataAPI, SkillChangeAPI, TitleAPI, TransmutationAPI, VisibilityLockAPI, plus compat creators and event classes). Update core codepaths and resources to support scripting and runtime control (commands, network packets, registries, client GUI/overlay, handlers). Add GUI textures and localization updates, tweak build.gradle/gradle.properties, and update .gitignore to ignore /mod.